@@ -119,6 +119,10 @@ module Rack
         "Hello, PUT: #{params.inspect}"
       end
 
+      patch "/" do
+        "Hello, PUT: #{params.inspect}"
+      end
+
       delete "/" do
         "Hello, DELETE: #{params.inspect}"
       end
